--- a/app/src/main/res/layout/activity_reader_web_view.xml
+++ b/app/src/main/res/layout/activity_reader_web_view.xml
@@ -43,6 +43,14 @@
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.60" />
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/activity_webview_constraint2_guideline_v_5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.85" />
+
+
         <RelativeLayout
             android:id="@+id/relativeLayout"
             android:layout_width="0dp"
@@ -78,7 +86,7 @@
                 android:layout_centerInParent="true"
                 android:maxLength="20"
                 android:text="Reader"
-                android:textAlignment="center"
+                android:gravity="center"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -86,7 +94,7 @@
 
             <ProgressBar
                 android:id="@+id/activity_webview_loader"
-                style="@style/ProgressBarBlue"
+                style="@style/ProgressBarWHite"
                 android:layout_width="26dp"
                 android:layout_height="32dp"
                 android:layout_alignEnd="@id/activity_webview_constraint2_title_textview"
@@ -105,7 +113,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:src="@drawable/ic_baseline_refresh_24"
-            android:visibility="visible"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
             app:layout_constraintTop_toTopOf="parent"
@@ -124,7 +132,7 @@
             app:layout_constraintEnd_toStartOf="@+id/activity_webview_constraint2_guideline_v_3"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/info"
+            app:srcCompat="@drawable/back_arrow"
             app:tint="@color/white" />
 
         <ProgressBar
