--- a/app/src/main/res/layout/fragment_collection_form.xml
+++ b/app/src/main/res/layout/fragment_collection_form.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:elevation="15dp"
+    android:paddingBottom="15dp"
     android:background="@drawable/top_rounded_corner_gray_background"
     tools:context=".Fragments.CollectionFormFragment">
 
@@ -129,14 +130,51 @@
 
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/fragment_collectionform_pickuplocdatetime_layout_holder"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:theme="@style/loginActivityHintStyle"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            app:layout_constraintLeft_toRightOf="@+id/fragment_collectionform_guideline_v1"
+            app:layout_constraintRight_toLeftOf="@+id/fragment_collectionform_guideline_v2"
+            app:layout_constraintTop_toTopOf="@+id/fragment_collectionform_guideline_h1">
+
+            <TextView
+                android:id="@+id/fragment_collectionform_timeinfo_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_gravity="end"
+                android:text="Set Pickup Time"
+                android:textColor="@color/color_gray"
+                android:textSize="16sp"/>
+
+            <TimePicker
+                android:id="@+id/fragment_collectionform_pickupdatetime_timepicker"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:timePickerMode="spinner"
+                android:hint="Collection Time"
+                android:inputType="datetime"
+                android:labelFor="@id/fragment_collectionform_pickupdatetime_timepicker"
+                android:maxLength="20"
+                android:textColor="@drawable/login_activity_input_text_color" />
+
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/fragment_collectionform_pickuplocation_edittext_layout_holder"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:theme="@style/fragmentFormHintStyle"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            app:layout_constraintLeft_toRightOf="@+id/fragment_collectionform_guideline_v1"
-            app:layout_constraintRight_toLeftOf="@+id/fragment_collectionform_guideline_v2"
-            app:layout_constraintTop_toTopOf="@+id/fragment_collectionform_guideline_h1">
+            app:layout_constraintEnd_toStartOf="@+id/fragment_collectionform_guideline_v2"
+            app:layout_constraintStart_toEndOf="@+id/fragment_collectionform_guideline_v1"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_collectionform_pickuplocdatetime_layout_holder">
 
             <EditText
                 android:id="@+id/fragment_collectionform_pickuplocation_edittext"
@@ -144,39 +182,24 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="Collection &amp; Drop-off Location"
+                android:inputType="textMultiLine"
                 android:maxLength="40"
-                android:inputType="text"
                 android:labelFor="@id/fragment_collectionform_pickuplocation_edittext"
                 android:textColor="@drawable/login_activity_input_text_color" />
 
 
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/fragment_collectionform_pickuplocdatetime_layout_holder"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:theme="@style/loginActivityHintStyle"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            app:layout_constraintEnd_toStartOf="@+id/fragment_collectionform_guideline_v2"
-            app:layout_constraintStart_toEndOf="@+id/fragment_collectionform_guideline_v1"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_collectionform_pickuplocation_edittext_layout_holder">
-
-            <EditText
-                android:id="@+id/fragment_collectionform_pickupdatetime_edittext"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/fragment_collectionform_usegps_textview"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Collection Time"
-                android:inputType="datetime"
-                android:labelFor="@id/fragment_collectionform_pickupdatetime_edittext"
-                android:maxLength="20"
-                android:textColor="@drawable/login_activity_input_text_color" />
+                android:layout_marginStart="10dp"
+                android:layout_gravity="end"
+                android:text="Use current location"
+                android:textColor="@color/color_gray"
+                android:textSize="16sp"/>
 
 
         </com.google.android.material.textfield.TextInputLayout>
-
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/fragment_collectionform_contactpersonphone_layout_holder"
@@ -186,7 +209,7 @@
             android:theme="@style/loginActivityHintStyle"
             app:layout_constraintEnd_toStartOf="@+id/fragment_collectionform_guideline_v2"
             app:layout_constraintStart_toStartOf="@+id/fragment_collectionform_guideline_v1"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_collectionform_pickuplocdatetime_layout_holder"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_collectionform_pickuplocation_edittext_layout_holder"
             app:layout_constraintVertical_bias="0.0"
             android:hint="Contact Phone Number"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
@@ -200,7 +223,7 @@
                 android:digits="0123456789"
                 android:maxLength="10"
                 android:inputType="phone"
-                android:labelFor="@id/fragment_collectionform_pickupdatetime_edittext"
+                android:labelFor="@id/fragment_collectionform_pickupdatetime_timepicker"
                 android:textColor="@drawable/login_activity_input_text_color" />
 
         </com.google.android.material.textfield.TextInputLayout>
