--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="color_gray_light_v2">#F3F2F2</color>
     <color name="color_blue_light">#5BB7DDEF</color>
     <color name="color_green_light">#8BC34A</color>
+    <color name="color_green_light_v1">#3C8BC34A</color>
     <color name="color_green_dark">#457A07</color>
 
 
