--- a/app/src/main/res/layout/fragment_place_order.xml
+++ b/app/src/main/res/layout/fragment_place_order.xml
@@ -77,9 +77,9 @@
 
             <ImageView
                 android:id="@+id/fragment_placeorder_goodordericon_imageview"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/justwash"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/distribution"
                 app:layout_constraintBottom_toTopOf="@+id/fragment_placeorder_goodordertitle_textview"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -91,11 +91,12 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Good Order"
+                android:text="Start Pickup Request"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
                 android:textColor="@color/black"
                 android:textStyle="bold"
+                android:textSize="22sp"
                 app:layout_constraintBottom_toTopOf="@+id/fragment_placeorder_goodorderinfodesc_textview"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -108,7 +109,7 @@
                 android:gravity="center"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
-                android:text="Click here to place an order by setting all the needed information on the app. This is slower but allows you to enter promo and coupon codes"
+                android:text="Fill Info &#8226; Apply Discounts &#8226; Check Pricing"
                 android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -150,9 +151,9 @@
 
             <ImageView
                 android:id="@+id/fragment_placeorder_fastordericon_imageview"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/justwash"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:src="@drawable/callback"
                 app:layout_constraintBottom_toTopOf="@+id/fragment_placeorder_fastordertitle_textview"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -167,9 +168,10 @@
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
                 android:gravity="center"
-                android:text="Fast Order"
+                android:text="Request Callback"
                 android:textColor="@color/black"
                 android:textStyle="bold"
+                android:textSize="22sp"
                 app:layout_constraintBottom_toTopOf="@+id/fragment_placeorder_fastorderinfodesc_textview"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -182,7 +184,7 @@
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
                 android:gravity="center"
-                android:text="Click here to place a fast order where we simply call your number on file to get the needed details to make your pick up"
+                android:text="We Call You  &#8226; Take Order Info  &#8226; No Discounts"
                 android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
