--- a/app/src/main/res/layout/list_item_order.xml
+++ b/app/src/main/res/layout/list_item_order.xml
@@ -69,21 +69,22 @@
             android:id="@+id/list_item_order_pickuploc_imageview"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:layout_marginTop="5dp"
             android:scaleType="centerCrop"
             android:src="@drawable/location"
             app:layout_constraintBottom_toTopOf="@+id/tag_holder"
             app:layout_constraintEnd_toStartOf="@+id/list_item_order_loc_textview"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toEndOf="@+id/list_item_order_v_guideline1"
-            app:layout_constraintTop_toBottomOf="@+id/list_item_order_title_textview"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.100000024" />
 
         <TextView
             android:id="@+id/list_item_order_loc_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
             android:text="Adenta"
             android:textColor="@color/color_gray"
             android:textSize="12sp"
@@ -91,7 +92,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/list_item_order_pickuploc_imageview"
-            app:layout_constraintTop_toBottomOf="@+id/list_item_order_title_textview" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
 
         <TextView
@@ -114,16 +116,17 @@
             android:id="@+id/list_item_order_orderamount_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:text="$10"
+            android:visibility="gone"
             android:textColor="@color/black"
             android:textSize="15sp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/list_item_order_v_guideline1"
-            app:layout_constraintTop_toTopOf="parent" />
+            />
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
