--- a/app/src/main/res/layout/slider_layout_info1.xml
+++ b/app/src/main/res/layout/slider_layout_info1.xml
@@ -106,15 +106,17 @@
         android:id="@+id/slider_activity_slider_layout_slider_text_body"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="We at MeMaww have put together this service to make it easy for you to get your laundry done. We hope you benefit and like this service at least half as much as we have loved to bring the service to you"
         android:textAlignment="center"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/slider_activity_slider_layout_guideline_h3"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/slider_activity_slider_layout_slider_text_title" />
+        app:layout_constraintTop_toBottomOf="@+id/slider_activity_slider_layout_slider_text_title"
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
